cabal-version:      3.0
name:               amazonka-contrib-rds-utils
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MPL-2.0
license-file:       LICENSE
author:             Maxim Avanov
maintainer:         maxim.avanov@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
