cabal-version:      3.0
name:               amazonka-contrib-rds-utils
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MPL-2.0
license-file:       LICENSE
author:             Maxim Avanov
maintainer:         maxim.avanov@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Network.AWS.RDS.Utils

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base          >= 4.14.1.0
                    ,   amazonka      >= 1.6.1
                    ,   amazonka-core

    hs-source-dirs:     src

    default-language:   Haskell2010

    default-extensions: OverloadedStrings
                        LambdaCase
                        QuasiQuotes

    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Werror
                        -fPIC
                        -static
                        -optl=-pthread

    cc-options:         -static
